# KSP-BC

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
docs/: build-from-source.md  discovery.md  ksp-paths.md  p2p.md  protocol.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/craft/: metadata.rs  mod.rs  parser.rs
src/engine/: handshake.rs  mod.rs  quic.rs  receiver.rs  sender.rs
src/ksp/: detector.rs  mod.rs  paths.rs
src/transport/: mdns.rs  mod.rs  p2p.rs  tcp.rs
tests/: craft_parser.rs  mdns_discovery.rs  quic_transfer.rs  tcp_transfer.rs
