[package]
name = "ksp-blueprintshare"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.75"
authors = ["KSP BlueprintShare contributors"]
description = "P2P sharing of Kerbal Space Program craft files between friends."
license = "MIT"
repository = "https://github.com/LevaKost/KSP-BC"
readme = "README.md"
keywords = ["ksp", "kerbal", "p2p", "filesharing", "craft"]
categories = ["command-line-utilities", "games"]

[[bin]]
name = "ksp-share"
path = "src/main.rs"

[lib]
name = "ksp_blueprintshare"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
