[package]
name = "ksp-blueprintshare"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.75"
authors = ["KSP BlueprintShare contributors"]
description = "P2P sharing of Kerbal Space Program craft files between friends."
license = "MIT"
repository = "https://github.com/LevaKost/KSP-BC"
readme = "README.md"
keywords = ["ksp", "kerbal", "p2p", "filesharing", "craft"]
categories = ["command-line-utilities", "games"]

[[bin]]
name = "ksp-share"
path = "src/main.rs"

[lib]
name = "ksp_blueprintshare"
path = "src/lib.rs"

[features]
# Default build: only the synchronous TCP + LAN-mDNS transport. Keeps
# build time and binary size small for users who only need local-network
# sharing.
default = []
# QUIC P2P transport via `iroh`, with NAT hole-punching and a public
# relay-server fallback. Pulls in tokio + ~200 transitive crates and
# requires Rust >= 1.89.
p2p = ["dep:iroh", "dep:tokio"]

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
indicatif = "0.17"
mdns-sd = "0.18"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Optional — only pulled in when the `p2p` feature is enabled.
iroh = { version = "0.98", optional = true }
tokio = { version = "1.40", optional = true, features = ["rt-multi-thread", "macros", "io-util", "sync", "time"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
